--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,8 @@ body {
     ul {
         list-style-type: none;
         margin: 0;
-        padding: 0;
+        padding: 3px;
+        font-size: 12px;
     }
 
     a {
@@ -26,10 +27,6 @@ body {
     a {
         color: #F4F4F4;
     }
-}
-
-nav a {
-    font-size: 14px;
 }
 
 header {
@@ -167,7 +164,7 @@ section {
 }
 
 @media only screen and (min-width: 673px) {
-    nav a {
+    body ul {
         font-size: unset;
     }
     
